# FrameCapturer

./: .gitignore  .gitmodules  build.sh
Dependencies/: build.sh
Plugin/: CMakeLists.txt
Plugin/Test/: CMakeLists.txt
Plugin/cmake/: FindFLAC.cmake  FindOgg.cmake  FindOpenEXR.cmake  FindOpus.cmake  FindPNG.cmake  FindVPX.cmake  FindVorbis.cmake  FindWEBM.cmake  FindYUV.cmake  FindZLIB.cmake
Plugin/fccore/: CMakeLists.txt
